# intentdiff

./: .gitignore  JULES_PROMPT.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
intentdiff/: __init__.py  analyzer.py  cli.py  config.py  diff_fetcher.py  display.py  explainer.py  hunk_parser.py  risk_scorer.py
tests/: test_config.py  test_diff_fetcher.py  test_display.py  test_hunk_parser.py  test_risk_scorer.py
tests/fixtures/: boundary_condition_change.patch  exception_scope_change.patch  logic_operator_change.patch  safe_refactor.patch
